chore: commented out tab code for editor sidebar, aligned details icons correctly (ZNTA-1732)

--- a/server/zanata-frontend/src/editor/app/containers/Root/index.css
+++ b/server/zanata-frontend/src/editor/app/containers/Root/index.css
@@ -312,6 +312,10 @@ li.docName span.ellipsis {
   border-top-right-radius: 0;
 }
 
+.pull-right {
+  float:right !important;
+}
+
   /**
    * Media Queries
    */
